fixed column height (delete align-items: flex-start)

--- a/src/pages/Kanban/Kanban.module.css
+++ b/src/pages/Kanban/Kanban.module.css
@@ -70,5 +70,4 @@
 
 .kanbanContainer {
   flex: 1;
-  overflow-y: auto;
 }
